2003-08-29	ujwal
    
    * Fixed a problem in calculating number of rows when tabs are on the side.
    * Disabled "trim white space on copy" feature. Terminal applications should 
      not really be doing this. If the feature is requested again, we could make 
      it an option.
    * Made PTYTask: +_processReadTask non-blocking so that other functions can be 
      performed during idle time.

2003-08-28	fabian

    * Changed version number to 0.7.7
    * Updated documentation
    * Fixed a typo in Preference panel of zh_TW localiztion
    
2003-08-13	ujwal

    * Fixed an obscure bug that prevented textview from being first responder when 
      "hide tab" option was disabled. Now not allowing tabview to accept first responder.


2003-08-13	sgehrman & ujwal

    * Moved config panel sheet and code into separate nib file and controller.

2003-08-11	sgehrman

    * fixed a bug when setting tabs to the right or left.
    * made iTermApplicationDelegate to further separate that code from the iTermController
    * added [iTermController sharedInstance] to make it simple to use one instance of this
    * added some missing [super dealloc] calls
    * cleaned up some formatting
    * cleaned up addressbookcontroller


2003-08-09	ujwal

    * Fixed resizing when terminal view is not in an iTerm window.

2003-08-08	ujwal

    * Fixed a bug that caused sessions launched from applescript in a 
      new window not honor the row, column, and font settings.
      
    * Created [PseudoTerminal initViewWithFrame] that creates a terminal view that should 
      be embeddable in a non-iTerm window. Refactored window initialization 
      code in the process so that an iTerm window does not have to be created 
      before a terminal view can be created.

    * Moved all the header files into Headers/iTerm. Easier to build a framework.
    
    * Made images loadable from bundle.

2003-08-06	ujwal
    
    * Removed all references to [NSApp delegate].
    